Hide unanchored extension-uninstall-dialog arrow

This dialog arrow is not visible on desktop outside of CrOS as the arrow
isn't rendered for Harmony dialogs.

Bug: chromium:828365
Change-Id: I61f8776c7c3dd725aba9700efa7412812c2f0811
Reviewed-on: https://chromium-review.googlesource.com/1002540
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549315}
Former-commit-id: f272d1e2923cd3302a6bacf903b40c1b0ed59d9e